RESOLVED FIXED274199
REGRESSION (278793@main): Text remains invisible after calling `-[WKWebView _disableTextIndicatorStylingWithUUID:]`
https://bugs.webkit.org/show_bug.cgi?id=274199
Summary REGRESSION (278793@main): Text remains invisible after calling `-[WKWebView _...
Aditya Keerthi
Reported 2024-05-14 22:50:58 PDT
Attachments
Aditya Keerthi
Comment 1 2024-05-14 22:59:07 PDT
EWS
Comment 2 2024-05-15 01:05:43 PDT
Committed 278800@main (8a064b27ec04): <https://commits.webkit.org/278800@main> Reviewed commits have been landed. Closing PR #28583 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.