REGRESSION (278793@main): Text remains invisible after calling `-[WKWebView _disableTextIndicatorStylingWithUUID:]` https://bugs.webkit.org/show_bug.cgi?id=274199 rdar://128109686

Reviewed by Megan Gardner, Tim Horton and Richard Robinson.

Following 278793@main, `TransparentContent` markers are only removed for ranges
tracked by `UnifiedTextReplacementController`. This is incorrect, as these
markers are also added for ranges created by the `WKWebView` SPI to add text
indicator styles. Consequently, when attempting to remove markers via
`-[WKWebView _disableTextIndicatorStylingWithUUID:]`, nothing happens, leaving
text in an invisible state.

Fix by adding a separate removal path for text indicator styles created using
`WKWebView` SPI.

* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::updateTextIndicatorStyleVisibilityForID):

Canonical link: https://commits.webkit.org/278800@main