Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm
@@ -373,9 +373,15 @@ void WebPage::updateTextIndicatorStyleVisibilityForID(const WTF::UUID uuid, bool
         return;
     }
 
-    if (visible)
-        m_unifiedTextReplacementController->removeTransparentMarkersForSession(uuid, RemoveAllMarkersForSession::No);
-    else
+    if (visible) {
+        // FIXME: <https://webkit.org/b/274198> Text indicator style logic in WebPage and UnifiedTextReplacementController should be shared.
+        if (m_textIndicatorStyleEnablementRanges.contains(uuid)) {
+            document->markers().filterMarkers(*sessionRange, [uuid](const WebCore::DocumentMarker& marker) {
+                return std::get<WebCore::DocumentMarker::TransparentContentData>(marker.data()).uuid == uuid ? WebCore::FilterMarkerResult::Remove : WebCore::FilterMarkerResult::Keep;
+            }, { WebCore::DocumentMarker::Type::TransparentContent });
+        } else
+            m_unifiedTextReplacementController->removeTransparentMarkersForSession(uuid, RemoveAllMarkersForSession::No);
+    } else
         document->markers().addTransparentContentMarker(*sessionRange, uuid);
 
     completionHandler();
